--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,3 +95,80 @@ nav ul {
 nav li {
   list-style: none;
 }
+
+.gallery {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.gallery .poster {
+  width: 200px;
+  height: 300px;
+  position: absolute;
+  -webkit-transition: 0.5s -webkit-transform;
+  transition: 0.5s -webkit-transform;
+  transition: 0.5s transform;
+  transition: 0.5s transform, 0.5s -webkit-transform;
+}
+
+.gallery img {
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.gallery .poster-1 {
+  -webkit-transform: translate3d(-30%, 30%, 0) skew(0deg, 12deg);
+          transform: translate3d(-30%, 30%, 0) skew(0deg, 12deg);
+  z-index: 3;
+}
+
+.gallery .poster-1:hover {
+  -webkit-transform: translate3d(-30%, 20%, 0) skew(-5deg, 12deg);
+          transform: translate3d(-30%, 20%, 0) skew(-5deg, 12deg);
+}
+
+.gallery .poster-2 {
+  -webkit-transform: translate3d(-10%, 10%, 0) skew(0deg, 12deg);
+          transform: translate3d(-10%, 10%, 0) skew(0deg, 12deg);
+  z-index: 2;
+}
+
+.gallery .poster-2:hover {
+  -webkit-transform: translate3d(-10%, 0%, 0) skew(-5deg, 12deg);
+          transform: translate3d(-10%, 0%, 0) skew(-5deg, 12deg);
+}
+
+.gallery .poster-3 {
+  -webkit-transform: translate3d(10%, -10%, 0) skew(0deg, 12deg);
+          transform: translate3d(10%, -10%, 0) skew(0deg, 12deg);
+  z-index: 1;
+}
+
+.gallery .poster-3:hover {
+  -webkit-transform: translate3d(10%, -20%, 0) skew(-5deg, 12deg);
+          transform: translate3d(10%, -20%, 0) skew(-5deg, 12deg);
+}
+
+.gallery .poster-4 {
+  -webkit-transform: translate3d(30%, -30%, 0) skew(0deg, 12deg);
+          transform: translate3d(30%, -30%, 0) skew(0deg, 12deg);
+  z-index: 0;
+}
+
+.gallery .poster-4:hover {
+  -webkit-transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
+          transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
+}
