--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -80,3 +80,54 @@ nav {
     list-style: none;
   }
 }
+
+.gallery {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  .poster {
+    width: 200px;
+    height: 300px;
+    position: absolute;
+    transition: 0.5s transform;
+  }
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .poster-1 {
+    transform: translate3d(-30%, 30%, 0) skew(0deg, 12deg);
+    z-index: 3;
+    &:hover {
+      transform: translate3d(-30%, 20%, 0) skew(-5deg, 12deg);
+    }
+  }
+  .poster-2 {
+    transform: translate3d(-10%, 10%, 0) skew(0deg, 12deg);
+    z-index: 2;
+    &:hover {
+      transform: translate3d(-10%, 0%, 0) skew(-5deg, 12deg);
+    }
+  }
+  .poster-3 {
+    transform: translate3d(10%, -10%, 0) skew(0deg, 12deg);
+    z-index: 1;
+    &:hover {
+      transform: translate3d(10%, -20%, 0) skew(-5deg, 12deg);
+    }
+  }
+  .poster-4 {
+    transform: translate3d(30%, -30%, 0) skew(0deg, 12deg);
+    z-index: 0;
+    &:hover {
+      transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
+    }
+  }
+}
