--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -25,7 +25,7 @@ header {
   .content {
     display: flex;
     justify-content: space-between;
-    height: 100%;
+    height: calc(100% - 6rem);
   }
 
   .left,
@@ -38,10 +38,6 @@ header {
 
   .left {
     width: 60%;
-  }
-
-  .right {
-    width: 35%;
   }
 
   h1 {
@@ -86,7 +82,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 320px;
   .poster {
     width: 200px;
     height: 300px;
