--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -56,7 +56,7 @@ header p {
   font-size: 2.75rem;
 }
 
-header button {
+header .navToSearch {
   margin-top: 0.5rem;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -66,9 +66,10 @@ header button {
   background: #000639;
   color: #f2e0cf;
   border: none;
+  text-decoration: none;
 }
 
-header button:hover {
+header .navToSearch:hover {
   cursor: pointer;
   background: #95bf47;
   color: #000639;
