--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,15 @@
   font-family: "Montserrat", sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: #000639;
+}
+
+li {
+  list-style: none;
+}
+
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -168,4 +177,53 @@ nav li {
 .gallery .poster-4:hover {
   -webkit-transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
           transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
+}
+
+.searchForm {
+  margin: 0 auto;
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.searchForm label {
+  text-align: center;
+  width: 100%;
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.searchForm input {
+  width: 70%;
+  background-color: #000639;
+  outline: none;
+  border: none;
+  color: #f2e0cf;
+  padding: 0.25rem 0.5rem;
+  font-size: 1.25rem;
+}
+
+.searchForm button {
+  margin-left: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  border: none;
+  background: #000639;
+  color: #f2e0cf;
+  font-size: 1rem;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+}
+
+.card img {
+  width: 100%;
+  max-height: 100%;
 }
