--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -16,6 +16,10 @@ a {
   color: $primary-color;
 }
 
+li {
+  list-style: none;
+}
+
 // Utilities
 .container {
   max-width: 1280px;
@@ -131,5 +135,45 @@ nav {
     &:hover {
       transform: translate3d(30%, -40%, 0) skew(-5deg, 12deg);
     }
+  }
+}
+
+.searchForm {
+  margin: 0 auto;
+  width: 40%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  label {
+    text-align: center;
+    width: 100%;
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
+  }
+  input {
+    width: 70%;
+    background-color: $primary-color;
+    outline: none;
+    border: none;
+    color: $secondary-color;
+    padding: 0.25rem 0.5rem;
+    font-size: 1.25rem;
+  }
+  button {
+    margin-left: 0.5rem;
+    padding: 0.5rem 0.75rem;
+    border: none;
+    background: $primary-color;
+    color: $secondary-color;
+    font-size: 1rem;
+  }
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  img {
+    width: 100%;
+    max-height: 100%;
   }
 }
