--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,7 +16,7 @@ li {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -218,12 +218,50 @@ nav li {
   font-size: 1rem;
 }
 
+.cards {
+  width: 65%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 2.5rem 0;
+}
+
 .card {
-  width: 300px;
-  height: 400px;
+  width: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card h3 {
+  font-weight: 500;
+  font-size: 1.125rem;
+}
+
+.card p {
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+.card .image {
+  width: 30%;
+  height: 100%;
 }
 
 .card img {
   width: 100%;
   max-height: 100%;
+}
+
+.card .info {
+  width: 65%;
+  font-weight: 300;
 }
