--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -22,7 +22,7 @@ li {
 
 // Utilities
 .container {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -169,11 +169,36 @@ nav {
   }
 }
 
+.cards {
+  width: 65%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 2.5rem 0;
+}
+
 .card {
-  width: 300px;
-  height: 400px;
+  width: 45%;
+  display: flex;
+  justify-content: space-between;
+  h3 {
+    font-weight: 500;
+    font-size: 1.125rem;
+  }
+  p {
+    font-weight: 300;
+    font-size: 1rem;
+  }
+  .image {
+    width: 30%;
+    height: 100%;
+  }
   img {
     width: 100%;
     max-height: 100%;
+  }
+  .info {
+    width: 65%;
+    font-weight: 300;
   }
 }
