--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -180,7 +180,7 @@ nav li {
 }
 
 .searchForm {
-  margin: 0 auto;
+  margin: 2rem auto;
   width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -218,8 +218,21 @@ nav li {
   font-size: 1rem;
 }
 
+.results p {
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+.results p strong {
+  font-weight: 500;
+}
+
 .cards {
   width: 65%;
+}
+
+.cards ul {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -231,6 +244,32 @@ nav li {
   margin: 2.5rem 0;
 }
 
+.cards .buttons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cards .buttons p {
+  font-weight: 300;
+  font-size: 1rem;
+  margin: 0 2rem;
+}
+
+.cards .buttons button {
+  border: none;
+  background-color: #95bf47;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
 .card {
   width: 45%;
   display: -webkit-box;
@@ -239,21 +278,19 @@ nav li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 1.25rem;
 }
 
 .card h3 {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 1.125rem;
 }
 
-.card p {
-  font-weight: 300;
-  font-size: 1rem;
-}
-
 .card .image {
-  width: 30%;
-  height: 100%;
+  width: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .card img {
@@ -262,6 +299,34 @@ nav li {
 }
 
 .card .info {
-  width: 65%;
+  width: 60%;
   font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card .actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.card .actions button {
+  width: 60%;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  border: none;
+  background: #95bf47;
 }
