--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -139,7 +139,7 @@ nav {
 }
 
 .searchForm {
-  margin: 0 auto;
+  margin: 2rem auto;
   width: 40%;
   display: flex;
   flex-wrap: wrap;
@@ -169,36 +169,83 @@ nav {
   }
 }
 
+.results {
+  p {
+    font-weight: 300;
+    font-size: 1rem;
+  }
+
+  p strong {
+    font-weight: 500;
+  }
+}
+
 .cards {
   width: 65%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 2.5rem 0;
+  ul {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2.5rem 0;
+  }
+  .buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+      font-weight: 300;
+      font-size: 1rem;
+      margin: 0 2rem;
+    }
+
+    button {
+      border: none;
+      background-color: $accent-color;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+  }
 }
 
 .card {
   width: 45%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1.25rem;
   h3 {
-    font-weight: 500;
+    font-weight: 700;
     font-size: 1.125rem;
   }
-  p {
-    font-weight: 300;
-    font-size: 1rem;
-  }
   .image {
-    width: 30%;
-    height: 100%;
+    width: 35%;
+    display: flex;
   }
+
   img {
     width: 100%;
     max-height: 100%;
   }
   .info {
-    width: 65%;
+    width: 60%;
     font-weight: 300;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .actions {
+    display: flex;
+    flex-direction: column;
+
+    button {
+      width: 60%;
+      padding: 0.5rem;
+      margin-top: 0.5rem;
+      border: none;
+      background: $accent-color;
+    }
   }
 }
