--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -152,20 +152,13 @@ nav {
   }
   input {
     width: 70%;
-    background-color: $primary-color;
+    background-color: $secondary-color;
     outline: none;
-    border: none;
-    color: $secondary-color;
+    border: 2px solid $primary-color;
+    color: $primary-color;
     padding: 0.25rem 0.5rem;
     font-size: 1.25rem;
-  }
-  button {
-    margin-left: 0.5rem;
-    padding: 0.5rem 0.75rem;
-    border: none;
-    background: $primary-color;
-    color: $secondary-color;
-    font-size: 1rem;
+    font-weight: 300;
   }
 }
 
