--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -1,3 +1,6 @@
+// Imports
+@import "mediaQueries";
+
 // Variables
 $primary-color: #000639;
 $secondary-color: #f2e0cf;
@@ -11,15 +14,72 @@ $accent-color: #95bf47;
   font-family: "Montserrat", sans-serif;
 }
 
+// Utilities
+.container {
+  max-width: 1440px;
+  width: 90%;
+  margin: 0 auto;
+}
+
 // General Styles
 
-button {
-  padding: 0.5rem;
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 1.125rem;
+}
+
+p {
+  font-weight: 300;
   font-size: 1rem;
+}
+
+p.error {
+  color: rgb(155, 4, 4);
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+button {
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 500;
   border: none;
+  border-radius: 20px;
+  background: $accent-color;
 
   &:hover {
     cursor: pointer;
+    background: $primary-color;
+    color: $secondary-color;
+  }
+}
+
+button.danger {
+  background-color: rgb(225, 107, 107);
+  color: $primary-color;
+  &:hover {
+    cursor: pointer;
+    background: red;
+    color: $secondary-color;
+  }
+}
+
+button.action {
+  background: $primary-color;
+  color: $secondary-color;
+  &:hover {
+    cursor: pointer;
+    background: $accent-color;
+    color: $primary-color;
   }
 }
 
@@ -32,21 +92,16 @@ li {
   list-style: none;
 }
 
-// Utilities
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
 // Main
 header {
   background: $secondary-color;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   .content {
     display: flex;
     justify-content: space-between;
-    height: calc(100% - 6rem);
+    height: calc(100vh - 6rem);
   }
 
   .left,
@@ -59,29 +114,6 @@ header {
 
   .left {
     width: 60%;
-  }
-
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-  }
-  p {
-    font-size: 2.75rem;
-  }
-  .navToSearch {
-    margin-top: 0.5rem;
-    width: fit-content;
-    padding: 0.75rem 1rem;
-    font-size: 1.75rem;
-    background: $primary-color;
-    color: $secondary-color;
-    border: none;
-    text-decoration: none;
-    &:hover {
-      cursor: pointer;
-      background: $accent-color;
-      color: $primary-color;
-    }
   }
 }
 
@@ -96,6 +128,31 @@ nav {
 
   li {
     list-style: none;
+  }
+}
+
+.heading {
+  margin-bottom: 0.25rem;
+}
+
+.subHeading {
+  font-size: 2.75rem;
+}
+
+.navToSearch {
+  margin-top: 1.5rem;
+  width: fit-content;
+  padding: 0.75rem 1rem;
+  font-size: 1.75rem;
+  border-radius: 50px;
+  background: $primary-color;
+  color: $secondary-color;
+  border: none;
+  text-decoration: none;
+  &:hover {
+    cursor: pointer;
+    background: $accent-color;
+    color: $primary-color;
   }
 }
 
@@ -159,8 +216,10 @@ nav {
   label {
     text-align: center;
     width: 100%;
-    font-size: 1.5rem;
     margin-bottom: 0.75rem;
+  }
+  h1 {
+    font-size: 2rem;
   }
   input {
     width: 70%;
@@ -175,11 +234,11 @@ nav {
 }
 
 .results,
-.resultsMessage {
+.message {
   width: 65%;
 }
 
-.resultsMessage {
+.message {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -221,10 +280,6 @@ nav {
       font-size: 1rem;
       margin: 0 2rem;
     }
-
-    button {
-      background-color: $accent-color;
-    }
   }
 }
 
@@ -233,10 +288,7 @@ nav {
   display: flex;
   justify-content: space-between;
   margin-bottom: 1.25rem;
-  h3 {
-    font-weight: 700;
-    font-size: 1.125rem;
-  }
+
   .image {
     width: 35%;
     display: flex;
@@ -248,6 +300,7 @@ nav {
   }
   .info {
     width: 60%;
+
     font-weight: 300;
     display: flex;
     flex-direction: column;
@@ -261,7 +314,6 @@ nav {
     button {
       width: 60%;
       margin-top: 0.5rem;
-      background: $accent-color;
     }
   }
 }
@@ -273,4 +325,16 @@ nav {
 
 .nominations {
   width: 30%;
+
+  text-align: center;
+
+  h3 {
+    margin-bottom: 0.25rem;
+  }
+  li {
+    margin-bottom: 1.5rem;
+  }
+  ul {
+    margin: 2.5rem 0 1rem 0;
+  }
 }
