--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -479,3 +479,24 @@ nav {
     display: none;
   }
 }
+
+.alert {
+  background: $accent-color;
+  padding: 0.5rem 1rem;
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  color: $primary-color;
+  border-radius: 50px;
+  p {
+    font-size: 1.5rem;
+  }
+}
+
+.view {
+  margin-top: 2rem;
+  h1,
+  li {
+    text-align: center;
+  }
+}
