--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -86,6 +86,10 @@ button {
     background: $primary-color;
     color: $secondary-color;
   }
+
+  &:disabled {
+    pointer-events: none;
+  }
 }
 
 button.danger {
